# pico-enviro-sensor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
scripts/: env-vars.sh
src/: constants.rs  display_task.rs  main.rs  sensor_task.rs
