[package]
name = "pico-enviro-sensor"
description = "Firmware for RPi Pico 2 W-based environment sensor"
authors = ["Adam Macdonald"]
homepage = "https://github.com/twokilohertz/pico-enviro-sensor"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
rp235x-hal = { version = "0.2.0", features = [
    "critical-section-impl",
    "binary-info",
] }
critical-section = "1.2.0"
embedded-hal = "1.0.0"
fugit = "0.3.7"
scd4x = { git = "https://github.com/twokilohertz/scd4x-rs.git", branch = "conversion-fixes", features = [
    "scd41",
] }
rtt-target = "0.6.1"
ssd1351 = "0.5.0"
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.1"

# Super-optimised release build, maximum performance, minimal debuggability
# Build with cargo build --profile dist
[profile.dist]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = "fat"
overflow-checks = false
codegen-units = 1
