[package]
name = "pico-enviro-sensor"
description = "Firmware for RPi Pico 2 W-based environment sensor"
authors = ["Adam Macdonald"]
homepage = "https://github.com/twokilohertz/pico-enviro-sensor"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy
embassy-rp = { version = "0.3.1", features = [
    "rp235xa",
    "binary-info",
    "critical-section-impl",
    "time-driver",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "task-arena-size-65536",
] }
embassy-time = "0.4.0"

cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
rtt-target = "0.6.1"

[profile.dev]
opt-level = "s"

# Super-optimised release build, maximum performance, minimal debuggability
# Build with cargo build --profile dist
[profile.dist]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = "fat"
overflow-checks = false
codegen-units = 1
