[package]
name = "pico-enviro-sensor"
description = "Firmware for RPi Pico 2 W-based environment sensor"
authors = ["Adam Macdonald"]
homepage = "https://github.com/twokilohertz/pico-enviro-sensor"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy
embassy-rp = { version = "0.3.1", features = [
    "rp235xa",
    "binary-info",
    "critical-section-impl",
    "time-driver",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "task-arena-size-65536",
] }
embassy-time = "0.4.0"
embassy-sync = "0.6.2"
embassy-embedded-hal = "0.3.0"
static_cell = "2.1.0"

# System
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"

# embedded-graphics
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"

# Peripherals
scd4x = { git = "https://github.com/twokilohertz/scd4x-rs.git", branch = "conversion-fixes", features = [
    "scd41",
] }
ssd1351 = "0.5.0"
display-interface-spi = "0.5.0"

# Extra
heapless = "0.8.0"

[profile.dev]
opt-level = "s"

# Super-optimised release build, maximum performance, minimal debuggability
# Build with cargo build --profile dist
[profile.dist]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = "fat"
overflow-checks = false
codegen-units = 1
